--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.Body2Baby"
         tools:targetApi="31">
         <activity
+            android:name=".MessageActivity"
+            android:exported="false" android:theme="@style/StyleWithoutToolbar"></activity>
+        <activity
             android:name=".FriendsActivity"
             android:exported="false" />
         <activity
